styles.css
body {
    margin: 0;
    padding: 0;
    
}

.page{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.page > * {
    flex-shrink: 1;
    flex-grow: 1;
}
img{
    width: 500px;
    height: auto;
    border-radius: 1cm;
}

.nav-bar{
    display: flex;
    flex: 1;
    background-color: #1f2937;
    flex-wrap: wrap;
    justify-content: center;
}

.nav-bar > * {
    flex-shrink: 1;
    min-width: 0;            
    text-overflow: ellipsis; 
    white-space: nowrap;     
    
}

.nav-bar .logo {
    align-self: flex-start;
    color: #f9faf8;
    font-size: 24px;
    padding-left: 50px;
    padding-right: 50px;
}

.nav-bar .header-link{
    align-items: flex-end;
    margin-left: auto;
    align-content: center;
    font-size: 18px;
    padding-right: 50px;
    padding-left: 50px;

}

.nav-bar .header-link > a{
    color: #e5e7eb;
    margin: 10px;
}

.main-text {
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    background-color: #1f2937;
    text-align:left;
    justify-content: space-evenly;
    gap: 5px;
}

.main-text > div {
    
    margin-top: 60px;
    margin-bottom: 60px;
    align-self: center;
    flex-basis: 500px;
    margin-left: 20px;
    margin-right: 20px;
   
}

.main-text .main-title{
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}

.main-text .main-message{
    font-size: 18px;
    color: #e5e7eb;
}

.main-image {
    flex-shrink: 1;
    width: 400px;
    min-width: 0;
}



.sign-up-button{
    background-color: #3882f6;
    color: #e5e7eb;
    width: 100px;
    height: 30px;
    border-radius: 0.5cm;
    font-weight: bold;
    text-align: center;
    border: none;
    margin-top: 10px;
}

.sign-up-button:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
  }

.info {
    display: flex;
    flex: 1;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    margin-top: 50px;
    justify-content: space-evenly;
}

.info .info-title {
    color: #1f2937;
    font-weight: bolder;
    font-size: 36px;
    margin-bottom: 20px;
}

.info .dog-info {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    
}

.info .dog-info > * {
    flex-basis: 200px;
    text-align: center;
}

.info .dog-info .info-img > img {
    width: 200px;
    height: 170px;
    border: #3882f6 5px solid;
}


.inspirational-msg {
       
    background-color: #e5e7eb;
    margin-top: 20px;
    display: flex;
    justify-content: center;
}

.inspirational-msg > * {
    flex-shrink: 1;
    flex-basis: 80ch;
    min-width: 0;
    padding-left: 20px;
    padding-right: 20px;

}

.inspirational-msg .msg {

    font: 36px light italic ;
    color: #1f2937;
}

.inspirational-msg .by{
    font-weight: bolder;
    font-size: 24px;
    
}

.sign-up-wrap{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.sign-up{
    background-color: #3882f6;
    display: flex;
    border-radius: 0.5cm;
    justify-content: space-around;
    align-items: center;
    flex-shrink: 1;
    flex-wrap: wrap;
    margin: 75px 200px;
    width: 1000px;
    min-width: 300px;
    padding: 20px;  
}

.sign-up > * {
    flex-shrink: 1;
    flex-wrap: wrap;
    

}

.sign-up .sign-up-message{
    color: #f9faf8;
    
}
.sign-up .sign-up-message p:nth-child(1){
    font-size: 20px;
    font-weight: bold;
}

.sign-up .sign-up-button{
    border: 2px solid;
    border-color: #e5e7eb;
}

.footer{
    background-color:#1f2937;
    display: flex;
    justify-content: center;
    height: 60px;
    align-items: center;
    color: #e5e7eb;
}

